combobox: Add workaround so evolution doesn't crash

Removing the NULL checks in 7f60cab47d9651ed3ed53b86f1f74de71b55eee0
caused evolution to crash. It chains up with NULL and that used to work.

This patch should be reverted for GTK 4.0.

https://bugzilla.gnome.org/show_bug.cgi?id=729496